# switrs-db

./: Cargo.toml  LICENSE  README.md  Schemas.toml  import-bicycle-crashes.sh  justfile
berkeley-tables/: BERKELEY_ROADS.csv  BERKELEY_ROAD_TYPOS.csv  CA_BIKE_LANE_TYPES.csv  CORRECTED_ROADS.csv  IMPROVEMENT_TYPES.csv  INTERSECTION_IMPROVEMENTS.csv  SIDE_OF_STREET.csv  STREET_IMPROVEMENTS.csv
lookup-tables/: BEAT_TYPE.csv  CHP_BEAT_CLASS.csv  CHP_BEAT_TYPE.csv  CHP_SHIFT.csv  CHP_VEHTYPE_AT_FAULT.csv  CNTY_CITY_LOC.csv  COLLISION_SEVERITY.csv  CONTROL_DEVICE.csv  DAY_OF_WEEK.csv  DIRECTION.csv  HIT_AND_RUN.csv  LIGHTING.csv  LOCATION_TYPE.csv  MOTOR_VEHICLE_INVOLVED_WITH.csv  MVIW.csv  PCF_CODE_OF_VIOL.csv  PCF_VIOLATION_CATEGORY.csv  PCF_VIOL_CATEGORY.csv  PED_ACTION.csv  POPULATION.csv  PRIMARY_COLL_FACTOR.csv  PRIMARY_RAMP.csv  RAMP_INTERSECTION.csv  ROAD_CONDITION_1.csv  ROAD_COND_2.csv  ROAD_SURFACE.csv  SECONDARY_RAMP.csv  SIDE_OF_HWY.csv  SPECIAL_COND.csv  SPECIAL_CONDITION.csv  STWD_VEHTYPE_AT_FAULT.csv  TYPE_OF_COLLISION.csv  WEATHER_1.csv  WEATHER_2.csv
old-switrs/: README.md  RawData_template.docx  VictimRecords.txt
schema/: berkeley_road_typos.sql  ca_bike_lane_types.sql  ccrs_crashes.sql  ccrs_injured_witness_passengers.sql  ccrs_normalized_roads.sql  ccrs_parties.sql  ccsr_crashes.sql  char-1-id.sql  char-2-id.sql  cleanup.sql  collision.sql  collisions.sql  corrected_roads.sql  improvement_types.sql  intersection_improvements.sql  normalized_roads.sql  parties.sql  party.sql  pk_table.sql  street_improvements.sql  switrs_cnty_city_loc.sql  switrs_collisions.sql  switrs_corrected_roads.sql  switrs_parties.sql  switrs_victims.sql  varchar-2-id.sql  victim.sql  victims.sql
src/: lib.rs  (+2 more)
switrs-to-csv/: Cargo.toml
switrs-to-csv/src/: lib.rs  main.rs
(+28 files in other folders)
