[package]
name = "switrs-to-csv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["cargo", "derive", "env"] }
derive_builder = "0.12.0"
humantime = "2.1.0"
humantime-serde = "1.1.1"
rusqlite = { version = "0.30.0", features = ["bundled", "time"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = { version = "0.3.30", features = [
    "parsing",
    "formatting",
    "serde",
    "serde-human-readable",
] }
thiserror = "1.0.50"
